# aviarium.columbarius

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  dependencies.py  main.py  pricing.py
app/routers/: __init__.py  admin.py  cards.py  health.py  predict.py  similar.py  underpriced.py
app/schemas/: __init__.py  responses.py
configs/: bronze_config.json  bronze_config_seed.json  data_sources.yaml  silver_config.json
docker/: Dockerfile  docker-compose.yml
docs/adr/: ADR-001-pydantic-validation-layer.md  ADR-002-duckdb-analytical-store.md  ADR-003-medallion-architecture.md  ADR-004-registry-based-source-extensibility.md  ADR-005-two-phase-pipeline-lifecycle.md  ADR-006-records-errors-tuple-pattern.md  ADR-007-three-level-configuration-hierarchy.md  ADR-008-config-driven-silver-transformations.md  ADR-009-mtgjson-priority-card-join-strategy.md  ADR-010-mypy-strict-mode-quality-gate.md  ADR-011-uv-package-manager.md  ADR-012-physical-cards-only.md  ADR-013-data-source-selection.md  ADR-014-http-retry-exponential-backoff.md  ADR-015-scraping-rights-review.md  ADR-016-app-src-layer-separation.md  ADR-017-lightgbm-over-xgboost-tensorflow.md  ADR-018-tier-based-model-selection.md  ADR-019-fastapi-startup-precomputation.md  ADR-020-monitoring-and-retraining-architecture.md  ADR-021-duckdb-map-type-for-legalities.md  ADR-022-gold-layer-tables.md  ADR-023-card-recommendation-strategy.md  ADR-024-duckdb-compute-layer.md  ADR-025-scalar-bronze-prices.md  ADR-026-isolate-mlflow-tracking-tests.md  ADR-027-tfidf-card-embeddings.md  ADR-028-shap-interpretability.md  ADR-029-duckdb-repository.md  ADR-030-shared-idiom-conventions.md  ADR-031-remote-alerting-channels.md  ADR-032-hot-model-reload-endpoint.md  ADR-033-global-exception-handler.md
docs/architecture/: README.md
docs/architecture/c1/: system-context.md
docs/architecture/c2/: containers.md
docs/architecture/c3/: api.md  data-pipeline.md  ml-system.md  monitoring.md
docs/architecture/c4/: api-state.md  bronze-storage.md  gold-storage.md  lightgbm-model.md  monitoring-modules.md  silver-storage.md
docs/architecture/data/: README.md  data-lineage.md  glossary.md  table-schemas.md
docs/investigations/: 2026-07-06-price-feed-anomalies.md  repo-quirks.md
docs/runbooks/: model-incidents.md
docs/superpowers/plans/: 2026-06-11-etap1-bronze-nauka.md  2026-06-15-etap2-silver-nauka.md  2026-06-16-etap3-gold-nauka.md  2026-06-20-etap4-ml-features-nauka.md  2026-06-22-socratic-teacher.md  2026-06-24-scalar-bronze-prices-v2.md  2026-06-24-scalar-bronze-prices.md  2026-07-02-etap5-modele-nauka.md
docs/superpowers/specs/: 2026-06-11-learning-collaboration-design.md  (+2 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  format.test.ts  format.ts  types.ts
notebooks/: README.md
notebooks/bayesian_analysis/: 01_prior_elicitation.ipynb  02_hierarchical_price_model.ipynb  03_bayesian_time_series.ipynb  04_bayesian_hypothesis_testing.ipynb  BAYESIAN_FINDINGS.md  priors_config.json
notebooks/confirmatory_data_analysis/: 01_rarity_and_card_attributes.ipynb  02_format_legality_and_demand.ipynb  03_tournament_signals.ipynb  04_temporal_stability_and_autocorrelation.ipynb  05_card_taxonomy.ipynb  06_seasonality.ipynb  07_market_cointegration.ipynb  CDA_FINDINGS.md
notebooks/exploratory_data_analysis/: 01_data_structure_and_quality.ipynb  02_distributions.ipynb  03_time_series.ipynb  04_feature_relationships.ipynb  EDA_FINDINGS.md
notebooks/ml_models/: 01_feature_engineering.ipynb  02_baseline_lightgbm.ipynb  03_time_series.ipynb  04_shap_optuna.ipynb  ML_FINDINGS.md
notebooks/model_preparation/: 01_leakage_and_target_definition.ipynb  02_feature_selection.ipynb  03_validation_strategy.ipynb  04_baseline_models.ipynb  MODEL_PREP_FINDINGS.md  baseline_benchmark.csv  feature_sets.json  leakage_config.json  validation_config.json
notebooks/statistical_properties/: 01_distribution_testing.ipynb  02_stationarity.ipynb  03_seasonal_decomposition.ipynb  04_cointegration.ipynb  05_per_card_stationarity.ipynb  06_structural_breaks.ipynb  07_price_comovement.ipynb  STAT_FINDINGS.md
scripts/: _common.py  backup_data.py  check_and_retrain.py  check_health.py  check_staples_html.py  kill_proc.py  migrate_bronze_prices.py  monitor_migration.py  pre-push  rollback_model.py  run_pipeline.py  train_model.py
scripts/bench/: bench_array_sizes.py  bench_cte_phases.py  bench_cte_phases2.py  bench_cte_timing.py  bench_explain.py  bench_explain_fix.py  bench_explain_full_buggy.py  bench_filebased_vs_memory.py  bench_format_count.py  bench_format_count_isolated.py  bench_identifiers_key.py  bench_nl_full_columns.py  bench_nl_vs_hash.py  bench_pipeline_vs_table.py  bench_silver_attach.py  bench_silver_full.py
src/: logger.py
src/data/: db.py  json_files.py  repository.py
src/ml/: __init__.py
src/monitoring/: __init__.py  alerts.py  drift.py  event_trigger.py  mape_tracker.py  retraining.py
tests/: conftest.py  test_logger.py
tests/app/: conftest.py  test_admin.py  test_cards_router.py  test_exception_handler.py  test_health.py  test_inference.py  test_lifespan.py  test_predict.py  test_similar.py  test_underpriced.py
tests/cards/: test_storage.py
tests/data/: test_json_files.py  test_repository.py
tests/ml/: conftest.py  test_tier_consistency.py
tests/monitoring/: test_alerts.py  test_drift.py  test_event_trigger.py  test_mape_tracker.py  test_retrain_integration.py  test_retraining.py
tests/scripts/: test_backup_data.py  test_check_and_retrain.py  test_check_health.py  test_kill_proc.py  test_migrate_bronze_prices.py  test_rollback_model.py  test_run_pipeline.py  test_train_model.py
(+106 files in other folders)
